force-app/main/default/objects/VOI_Status__c/VOI_Status__c.object-meta.xml
<CustomObject>
    <label>VOI Status</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>VOI Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOI Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>