force-app/main/default/objects/VOI_Status__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VOI Status</relationshipLabel>
    <relationshipName>VOI_Status</relationshipName>
    <type>Lookup</type>
</CustomField>