force-app/main/default/objects/VOI_Status__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>