force-app/main/default/objects/VOI_Status__c/fields/Current_VOI_section__c.field-meta.xml
<CustomField>
    <fullName>Current_VOI_section__c</fullName>
    <label>Current VOI section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VOI_Type_For__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Verificaiton</fullName>
                <default>true</default>
                <label>Email Verificaiton</label>
            </value>
            <value>
                <fullName>Id Upload</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>CQP</fullName>
            </value>
            <value>
                <fullName>TMCU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>