force-app/main/default/objects/VOI_Status__c/fields/Date_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_submitted__c</fullName>
    <label>Date submitted</label>
    <type>DateTime</type>
</CustomField>