force-app/main/default/objects/VOI_Status__c/fields/Identity__c.field-meta.xml
<CustomField>
    <fullName>Identity__c</fullName>
    <label>Identity</label>
    <length>23</length>
    <type>Text</type>
</CustomField>