force-app/main/default/objects/VOI_Status__c/fields/link_Expire_code__c.field-meta.xml
<CustomField>
    <fullName>link_Expire_code__c</fullName>
    <label>link Expire code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>