force-app/main/default/objects/VOI_Status__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>VOI Status</relationshipLabel>
    <relationshipName>VOI_Status</relationshipName>
    <type>Lookup</type>
</CustomField>