force-app/main/default/objects/VOI_Status__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VOI_Status</relationshipName>
    <type>Lookup</type>
</CustomField>