force-app/main/default/objects/VOI_Status__c/fields/Skip_VOI__c.field-meta.xml
<CustomField>
    <fullName>Skip_VOI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip VOI</label>
    <type>Checkbox</type>
</CustomField>