force-app/main/default/objects/VOI_Status__c/fields/SMS_URL__c.field-meta.xml
<CustomField>
    <fullName>SMS_URL__c</fullName>
    <label>SMS URL</label>
    <type>Url</type>
</CustomField>