force-app/main/default/objects/VOI_Status__c/fields/VOI_Detail__c.field-meta.xml
<CustomField>
    <fullName>VOI_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOI Detail</label>
    <referenceTo>VOI_Detail__c</referenceTo>
    <relationshipLabel>VOI Status</relationshipLabel>
    <relationshipName>VOI_Status</relationshipName>
    <type>Lookup</type>
</CustomField>