force-app/main/default/objects/VOI_Status__c/fields/VOI_stage__c.field-meta.xml
<CustomField>
    <fullName>VOI_stage__c</fullName>
    <formula>IF( ISBLANK(TEXT(VOI_Type_For__c) ) , TEXT(Contact__r.VOI_type__c), TEXT(VOI_Type_For__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOI stage</label>
    <type>Text</type>
</CustomField>