force-app/main/default/objects/VOI_Status__c/fields/VOI_Status__c.field-meta.xml
<CustomField>
    <fullName>VOI_Status__c</fullName>
    <label>VOI Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>eSign Complete</fullName>
            </value>
            <value>
                <fullName>VOI Failed, eSign Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>