force-app/main/default/objects/VOI_Status__c/fields/VOI_Type_For__c.field-meta.xml
<CustomField>
    <fullName>VOI_Type_For__c</fullName>
    <label>VOI type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL</fullName>
                <default>true</default>
                <label>FULL</label>
            </value>
            <value>
                <fullName>VOI</fullName>
            </value>
            <value>
                <fullName>E-SIGN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>