force-app/main/default/objects/VOI_Status__c/fields/VOI_URL__c.field-meta.xml
<CustomField>
    <fullName>VOI_URL__c</fullName>
    <label>VOI URL</label>
    <type>Url</type>
</CustomField>