force-app/main/default/objects/VOI_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VOI_Details__c</columns>
    <columns>VOI_Status__c</columns>
    <columns>VOI_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>